--- a/css/master.css
+++ b/css/master.css
@@ -36,3 +36,30 @@
     height: 100px;
     background-color: #425b76;
 }
+.principal{
+    max-width: 100vw;
+    -height: 100px;
+    background-color: #fff3ee;
+    border: none;
+}
+.principal main{
+    position: relative;
+    margin: 0 auto;
+    width: 75vw;
+    height: 400px;
+    background-color: #fff3ee;
+}
+.spazio{
+    max-width: 100vw;
+    -height: 100px;
+    background-color: #3ecdbb;
+    border-top: 4px solid #2d3e50;
+    border-bottom: 4px solid #2d3e50;
+}
+.spazio section{
+    position: relative;
+    margin: 0 auto;
+    width: 75vw;
+    height: 100px;
+    background-color: #3ecdbb;
+}
