--- a/css/master.css
+++ b/css/master.css
@@ -291,10 +291,6 @@ float: left;
     line-height: 60px;
     margin-left: 26px;
 }
-
-
-
-
 .content-secondo{
     background-color: #ffffff;
     width: 30%;
@@ -408,7 +404,7 @@ float: left;
 }
 
 /* FINE TERZO */
-
+/* INIZIO QUARTO BLOCCO */
 .dati{
     max-width: 100vw;
     -height: 100px;
@@ -422,6 +418,69 @@ float: left;
     width: 75vw;
     height: 800px;
     background-color: #00b0b1;
+    text-align: center;
+}
+.dati #titolo{
+    position: relative;
+    font-size: 25px;
+    top: 130px;
+    color: white;
+}
+.dati #descrizione{
+    position: relative;
+    font-size: 25px;
+    top: 150px;
+    color: white;
+    width: 60%;
+    margin: auto;
+}
+#titolo h3{
+    width: 55%;
+    margin: 0 auto;
+}
+.tabella{
+    background-color: red;
+    width: 1000px;
+    height:360px;
+    position: relative;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 400px;
+}
+.tabella-content{
+    background-color: yellow;
+    border: 1px solid black;
+    width: 250px;
+    height: 180px;
+    float: left;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* FINE TERZO BLOCCO     */
+principal-3{
+    max-width: 100vw;
+    -height: 100px;
+    background-color: #f5f8fa;
+    border: none;
+}
+.principal-3 main{
+    position: relative;
+    margin: 0 auto;
+    width: 75vw;
+    height: 1600px;
+    background-color: #f5f8fa;
+    text-align: center;
 }
 .finale{
     max-width: 100vw;
