--- a/css/master.css
+++ b/css/master.css
@@ -416,7 +416,7 @@ float: left;
     position: relative;
     margin: 0 auto;
     width: 75vw;
-    height: 800px;
+    height: 900px;
     background-color: #00b0b1;
     text-align: center;
 }
@@ -503,7 +503,7 @@ float: left;
 
 
 /* FINE TERZO BLOCCO     */
-principal-3{
+.principal-3{
     max-width: 100vw;
     -height: 100px;
     background-color: #f5f8fa;
@@ -513,10 +513,122 @@ principal-3{
     position: relative;
     margin: 0 auto;
     width: 75vw;
-    height: 1600px;
+    height: 950px;
     background-color: #f5f8fa;
     text-align: center;
 }
+.principal-3content{
+    width: 330px;
+    height: 190px;
+    left: 5%;
+    position: relative;
+    top: 120px;
+    text-align: left;
+    font-size: 25px;
+    line-height: 34px;
+    color: #33475b;
+}
+.principal-3content main img{
+    float: right;
+}
+.principal-3marche{
+    width: 500px;
+    height: 200px;
+    float: right;
+    position: relative;
+    bottom: 74px;
+}
+
+#marche{
+    width: 25%;
+    height: 100px;
+    float: left;
+    padding: 20px;
+}
+.principal-3marche #marche img{
+    width: 100px;
+}
+
+
+
+
+
+
+
+
+
+/* FINE TERZO BLOCCO */
+/* INIZIO QUARTO BLOCCO */
+.principal4{
+width: 100%;
+height: 500px;
+position: relative;
+top: 204px;
+text-align: left;
+}
+.principal4-titolo{
+width: 400px;
+height: 150px;
+position: relative;
+top: 90px;
+}
+.principal4-titolo h1{
+font-size: 31px;
+color:#33475b;
+text-align: left;
+position: relative;
+bottom: 32px;
+}
+.principal4-testo{
+width: 380px;
+height: 100px;
+position: relative;
+top: 90px;
+margin-bottom: 8px;
+}
+.principal4-testo small{
+position: relative;
+top: -80px;
+font-size: 15px;
+color:#33475b;
+}
+.principal4 #button{
+width: 220px;
+height: 80px;
+position: relative;
+border-radius: 5%;
+border-style: none;
+background-color: #ff7a59;
+color: #ffffff;
+font-size: 15px;
+cursor: pointer;
+float: left;
+}
+.principal4-end{
+width: 150px;
+height: 50px;
+position: relative;
+top: 90px;
+}
+.principal4-end h5{
+    color:#33475b;
+    font-size: 10px;
+    position: relative;
+    top: -63px;
+    width: 307px;
+    height: 26px;
+    float: left;
+}
+.principal4 img{
+    width: 350px;
+    position: relative;
+    bottom: 309px;
+    float: right;
+}
+
+
+
+/* FINE QUARTO BLOCCO */
 .finale{
     max-width: 100vw;
     -height: 100px;
