--- a/css/master.css
+++ b/css/master.css
@@ -549,14 +549,6 @@ float: left;
     width: 100px;
 }
 
-
-
-
-
-
-
-
-
 /* FINE TERZO BLOCCO */
 /* INIZIO QUARTO BLOCCO */
 .principal4{
@@ -626,9 +618,8 @@ top: 90px;
     float: right;
 }
 
-
-
 /* FINE QUARTO BLOCCO */
+/* INIZIO QUINTO BLOCCO */
 .finale{
     max-width: 100vw;
     -height: 100px;
@@ -641,4 +632,62 @@ top: 90px;
     width: 75vw;
     height: 800px;
     background-color:#425b76;
+}
+.liste{
+
+    width: 100%;
+    height: 250px;
+}
+.liste ul{
+    color: #c6d2dd;
+    position: relative;
+    text-align: initial;
+    left: 10%;
+    list-style: none;
+    float: left;
+    margin-right: 162px;
+    font-size: 19px;
+    top: 72px;
+
+}
+.tasto{
+    width: 20%;
+    height: 100px;
+    position: relative;
+    float: right;
+}
+.tasto button{
+    width: 150px;
+    height: 30px;
+    border-radius: 5%;
+    border-style: none;
+    background-color: #ffffff;
+    color: #33475b;
+    font-size: 15px;
+    cursor: pointer;
+}
+.footer{
+    background-color:red;
+    width: 100%;
+    height: 150px;
+    position: relative;
+    top: 150px;
+}
+#navbara {
+    line-height: 50px;
+    position: relative;
+    left: 30%;
+    top: 10%;
+}
+
+#navbara li{
+    margin: 0 5px;
+    font-size: 15px;
+    list-style: none;
+    float: left;
+}
+#navbara li a{
+    color: #33475b;
+    text-decoration: none;
+    margin: 15px;
 }
