--- a/css/master.css
+++ b/css/master.css
@@ -16,6 +16,88 @@
     background-color: red;
     border: 1px solid black;
 }
+.navfix{
+    max-width: 100vw;
+    height: 75px;
+    background-color: red;
+    border: none;
+
+}
+.navfixdiv{
+    position: fixed;
+    margin: 0 auto;
+    width: 100vw;
+    height: 75px;
+    background-color: #f5f8fa;
+    z-index: 99;
+    border-bottom: 1px solid #e0e6ed;
+}
+.navfixdiv nav{
+    position: relative;
+    margin: 0 auto;
+    width: 75vw;
+    height: 75px;
+    background-color: #f5f8fa;
+    border-bottom: 1px solid #e0e6ed;
+    padding-top: 15px;
+    padding-bottom: 15px
+}
+.navfixdiv nav .lingua{
+
+    width: 90px;
+    height: 45px;
+    padding-top: 10px;
+    float: left;
+}
+.navfixdiv nav .contatti{
+
+    width: 90px;
+    height: 45px;
+    padding-top: 10px;
+    float: left;
+}
+
+.navfixdiv nav .lingua span{
+    border-right: 1px solid #cbd6e2;
+    padding-right: 20px;
+}
+.navfixdiv nav .login{
+
+    width: 90px;
+    height: 45px;
+    padding-top: 10px;
+    float: right;
+}
+.navfixdiv nav .login button{
+    width: 95px;
+    height: 35px;
+    border-radius: 5%;
+    border-style: none;
+    background-color: #ff7a59;
+    color: #ffffff;
+    font-size: 10px;
+    cursor: pointer;
+}
+.navfixdiv nav .gethub{
+
+    width: 90px;
+    height: 45px;
+    padding-top: 10px;
+    float: right;
+}
+.navfixdiv nav .gethub button{
+    width: 65px;
+    height: 35px;
+    border-radius: 5%;
+    border-color: #ff7a59;
+    background-color: #ffffff;
+    color: #ff7a59;
+    font-size: 15px;
+    cursor: pointer;
+
+}
+
+
 .navbar{
     max-width: 100vw;
     -height: 100px;
@@ -129,11 +211,13 @@ nav img{
     position: relative;
     top: 90px;
     margin-bottom: 8px;
+    color:#33475b;
 }
 .principal-testo small{
     position: relative;
     top: 30px;
     font-size: 15px;
+    color:#33475b;
 }
 .principal #button{
     width: 220px;
@@ -153,7 +237,7 @@ nav img{
     position: relative;
     top: 90px;
 }
-.principal-end h5{
+.principal-end p{
     color:#33475b;
     font-size: 10px;
     position: relative;
@@ -203,11 +287,15 @@ nav img{
     position: relative;
     font-size: 25px;
     top: 130px;
+    color:#33475b;
 }
 .principal-2 #descrizione{
     position: relative;
-    font-size: 25px;
+    font-size: 15px;
     top: 150px;
+    width: 65%;
+    margin: 0 auto;
+    color:#33475b;
 }
 .content{
     background-color: #f5f8fa;
@@ -641,14 +729,19 @@ top: 90px;
 .liste ul{
     color: #c6d2dd;
     position: relative;
-    text-align: initial;
+    text-align: left;
     left: 10%;
     list-style: none;
     float: left;
-    margin-right: 162px;
+    margin-right: 50px;
     font-size: 19px;
     top: 72px;
 
+}
+.liste ul li a{
+    color: #cbd6e2;;
+    text-decoration: none;
+    margin: 15px;
 }
 .tasto{
     width: 20%;
@@ -663,31 +756,87 @@ top: 90px;
     border-style: none;
     background-color: #ffffff;
     color: #33475b;
-    font-size: 15px;
+    font-size: 9px;
     cursor: pointer;
 }
 .footer{
-    background-color:red;
+
     width: 100%;
     height: 150px;
     position: relative;
     top: 150px;
 }
-#navbara {
-    line-height: 50px;
-    position: relative;
-    left: 30%;
-    top: 10%;
+.sceltalingue{
+    width: 100%;
+    height: 50%;
 }
 
-#navbara li{
+#lingue ul{
+    margin: 0 5px;
+    font-size: 15px;
+    list-style: none;
+    float: left;
+    position: relative;
+    transform: translate(-50%);
+    left: 50%;
+}
+#lingue li{
     margin: 0 5px;
     font-size: 15px;
     list-style: none;
     float: left;
 }
-#navbara li a{
-    color: #33475b;
+#lingue li a{
+    color: #cbd6e2;;
+    text-decoration: none;
+    margin: 15px;
+}
+
+.footer hr{
+    position: relative;
+    top: 50%;
+    width: 100%;
+    color: #cbd6e2;
+}
+.pie{
+    width: 100%;
+    height: 50%;
+}
+.pie #logo{
+    width: 175px;
+    height: 100%;
+    position: relative;
+    float: left;
+    padding-top: 30px;
+}
+.pie #copiright{
+    width: 260px;
+    height: 100%;
+    float: right;
+    padding-top: 22px;
+    position: relative;
+    left: 20%;
+}
+.pie #logo p{
+    font-size: 10px;
+    margin-top: 10px;
+    color: #cbd6e2;
+}
+#copiright ul{
+    margin: 0 5px;
+    font-size: 15px;
+    list-style: none;
+    float: left;
+
+}
+#copiright li{
+    margin: 0 5px;
+    font-size: 15px;
+    list-style: none;
+    float: left;
+}
+#copiright li a{
+    color: #cbd6e2;;
     text-decoration: none;
     margin: 15px;
 }
