--- a/css/master.css
+++ b/css/master.css
@@ -94,7 +94,7 @@
     color: #ff7a59;
     font-size: 15px;
     cursor: pointer;
-
+    border: 1px solid;
 }
 
 
@@ -549,10 +549,12 @@ float: left;
     position: relative;
     top: 50px;
     font-size: 40px;
+    color: #ffffff;
 }
 .tabella-content p{
     position: relative;
     top:50px;
+    color: #ffffff
 }
 
 
@@ -711,7 +713,7 @@ top: 90px;
 .finale{
     max-width: 100vw;
     -height: 100px;
-    background-color: #425b76;
+    background-color: #33475b;
     border: none;
 }
 .finale main{
@@ -719,7 +721,7 @@ top: 90px;
     margin: 0 auto;
     width: 75vw;
     height: 800px;
-    background-color:#425b76;
+    background-color:#33475b;
 }
 .liste{
 
@@ -730,24 +732,27 @@ top: 90px;
     color: #c6d2dd;
     position: relative;
     text-align: left;
-    left: 10%;
     list-style: none;
     float: left;
-    margin-right: 50px;
-    font-size: 19px;
+    margin-right: 53px;
+    font-size: 17px;
     top: 72px;
-
+    line-height: 30px;
 }
 .liste ul li a{
     color: #cbd6e2;;
     text-decoration: none;
-    margin: 15px;
+}
+.liste ul li a:hover{
+    color: #7fd1de;
 }
 .tasto{
     width: 20%;
     height: 100px;
     position: relative;
     float: right;
+    right: 54px;
+    top: 10px;
 }
 .tasto button{
     width: 150px;
@@ -756,7 +761,7 @@ top: 90px;
     border-style: none;
     background-color: #ffffff;
     color: #33475b;
-    font-size: 9px;
+    font-size: 11px;
     cursor: pointer;
 }
 .footer{
@@ -791,7 +796,9 @@ top: 90px;
     text-decoration: none;
     margin: 15px;
 }
-
+#lingue li a:hover{
+    color: #7fd1de;
+}
 .footer hr{
     position: relative;
     top: 50%;
@@ -839,4 +846,7 @@ top: 90px;
     color: #cbd6e2;;
     text-decoration: none;
     margin: 15px;
+}
+#copiright li a:hover{
+    color: #7fd1de;
 }
